# pysim

./: .gitignore  MANIFEST.in  NEXT_STEPS.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  macos-sincos-iter.yml  wheels.yml
docs/: array_block_solver_plan.md  convergence_analysis.md  gprmax_analysis.md  hmatrix.md  wheels-ci-plan.md
scripts/: array_block_animation.py  array_block_scaling.py  array_block_verify.py  build_pynec.sh  compare_yagi_nec.py  derive_bspline_static_moments.py  extrapolate.py  extrapolate_deep.py  hmatrix_scaling.py  probe_bent_dipole_enrichment.py  probe_fandipole_enrichment.py  probe_k3_junction_imbalance.py  probe_sinusoidal_lr_symmetry.py  probe_y_fixture_enrichment.py  profile_triangular.py  triangular_convergence.py
src/momwire/: __init__.py  _aca.py  _accel.py  _accelerators.cpp  _bspline_kernels.py  _bspline_static_moments_inline.h  _quadrature.py  _triangular_kernels.py  array_block.py  bspline.py  hmatrix.py  sinusoidal.py  triangular.py
src/pysim/: __init__.py  _aca.py  _accelerators.cpp  _bspline_kernels.py  _bspline_static_moments.py  _legacy.py  _triangular_kernels.py  _util.py  abstract.py  array_block.py  augmented_spline.py  bspline.py  hmatrix.py  sinusoidal.py  spline.py  triangular.py  triangular_bent.py  triangular_yagi.py
tests/: test_accel_fallback.py  test_array_block.py  test_bspline.py  test_hmatrix.py  test_momwire.py  test_pynec_backend.py  test_pysim.py  test_spline.py  test_web_server.py
web/: pynec_backend.py  server.py
web/examples/: __init__.py  _base.py  _feedline.py  bowtie_1x2.py  fan_dipole.py  hentenna.py  hexbeam.py  hexbeam_5band.py  inverted_v.py  moxon.py  yagi.py
web/frontend/: vite.config.ts
web/frontend/src/: App.tsx  styles.css
