[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pysim"
version = "0.0.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "A pure-Python method-of-moments antenna simulator with optional C++ accelerators"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core runtime deps: the solver and its helpers import these unconditionally
# (numpy/scipy throughout src/pysim). The C++ _accelerators extension is an
# optional speedup, not required for import.
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
# Optional third-party MoM solvers used by the comparator scripts in
# scripts/. PyNEC is built from the vendored submodule via
# scripts/build_pynec.sh — not pip-installable here.
validation = [
    "pymininec>=1.2",
]

[project.urls]
Homepage = "https://github.com/stevenmburns/pysim"
Issues = "https://github.com/stevenmburns/pysim/issues"

[tool.pytest.ini_options]
# Only collect the project's own tests. A bare `pytest` would otherwise
# recurse into the vendored python-necpp submodule, whose Python-2-era
# test harnesses fail to even parse on modern Python.
testpaths = ["tests"]
norecursedirs = ["python-necpp"]
markers = [
    "slow: tests that take more than a couple seconds (deselect with -m 'not slow')",
    "plot: tests that produce plots for visual inspection (deselect with -m 'not plot')",
]
# Put the project root on sys.path so `web` (which lives next to `tests/`,
# not under src/) is importable from the pynec-backend tests.
pythonpath = ["."]

[tool.cibuildwheel]
# Modern CPython only. requires-python is >=3.8, but 3.8/3.9 predate the
# AVX2-baseline target; 3.10+ matches the "modern Linux/Windows" goal.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# 64-bit glibc Linux + 64-bit Windows only. Skip musllinux (Alpine/musl has no
# libmvec, and the -lmvec link in setup.py would fail), 32-bit, and PyPy.
skip = "*-musllinux_* *_i686 *-win32 pp*"
test-requires = "pytest"
# Only the three core solver test modules exercise the C++ accelerator and run
# without the web/PyNEC integration deps (fastapi + a separately-built PyNEC).
# -m skips slow/plot. cibuildwheel runs this from a temp dir against the
# installed wheel, so `import pysim` resolves to the wheel, not src/.
test-command = 'pytest {project}/tests/test_pysim.py {project}/tests/test_hmatrix.py {project}/tests/test_array_block.py -m "not slow and not plot"'

[tool.cibuildwheel.linux]
# glibc >= 2.28 ships libmvec; manylinux2014 (glibc 2.17) does NOT, so the
# -lmvec link in setup.py would fail. _2_28 is the right "modern Linux" floor.
# (It is also cibuildwheel 3.x+'s default, but pin it explicitly so a future
# default change can't silently drop libmvec.)
manylinux-x86_64-image = "manylinux_2_28"

[tool.ruff]
# Vendored upstream source (PyNEC + necpp) — never lint.
extend-exclude = ["python-necpp"]

[tool.ruff.lint]
ignore = ["E741"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]
