[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "momwire"
version = "0.2.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "A pure-Python method-of-moments antenna simulator with optional C++ accelerators"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    # Accelerated wheels are built for these three; other platforms fall back to
    # the pure-Python solver (the C++ extension is an optional build). Not "OS
    # Independent" — that connotes a pure-Python package, which this isn't.
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
# Core runtime deps: the solver and its helpers import these unconditionally
# (numpy/scipy throughout src/momwire). The C++ _accelerators extension is an
# optional speedup, not required for import.
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
# Test/dev flow: `pip install -e .[test]` reproduces the suite. numpy/scipy are
# core deps; these are the extra imports the tests use (matplotlib for the
# plot-marked tests, scikit-rf for the network tests) plus the runner. The
# PyNEC cross-check (tests/test_pynec_backend.py) additionally needs PyNEC,
# installed separately from the python-necpp fork's wheel — see README — and
# those tests skip cleanly without it, so it stays out of this list (it's a
# platform-specific --find-links wheel, not a PyPI package a name could pin).
test = [
    "pytest",
    "matplotlib",
    "scikit-rf",
]
# Optional third-party MoM solvers used by the comparator scripts in
# scripts/. (PyNEC is installed separately from the python-necpp fork's
# release wheel — see README — not from PyPI.)
validation = [
    "pymininec>=1.2",
]

[project.urls]
Homepage = "https://github.com/stevenmburns/momwire"
Issues = "https://github.com/stevenmburns/momwire/issues"

[tool.pytest.ini_options]
# Only collect the project's own tests.
testpaths = ["tests"]
markers = [
    "slow: tests that take more than a couple seconds (deselect with -m 'not slow')",
    "plot: tests that produce plots for visual inspection (deselect with -m 'not plot')",
]
# Put the project root on sys.path so the `validation` harness package (which
# lives next to `tests/`, not under src/) is importable from the backend tests.
pythonpath = ["."]

[tool.cibuildwheel]
# Modern CPython only. requires-python is >=3.8, but 3.8/3.9 predate the
# AVX2-baseline target; 3.10+ matches the "modern Linux/Windows" goal.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# 64-bit glibc Linux + 64-bit Windows only. Skip musllinux (Alpine/musl has no
# libmvec, and the -lmvec link in setup.py would fail), 32-bit, and PyPy.
skip = "*-musllinux_* *_i686 *-win32 pp*"
test-requires = "pytest"
# First assert the compiled C++ accelerator actually loads in the wheel: a
# failed import would otherwise be swallowed by triangular.py's pure-Python
# fallback, so the tests below would pass on a silently-degraded wheel. The
# direct import + _HAVE_* flags make that a hard failure instead.
#
# Then run only the three core solver modules — they exercise the accelerator
# without the PyNEC cross-check backend (a separately-built wheel, test-only).
# -m skips slow/plot. cibuildwheel runs this from a temp dir against the
# installed wheel, so `import momwire` resolves to the wheel, not src/.
test-command = 'python -c "import momwire._accelerators; from momwire import triangular as t; assert t._HAVE_ASSEMBLE_Z and t._HAVE_ASSEMBLE_Z_GENERAL" && pytest {project}/tests/test_momwire.py {project}/tests/test_hmatrix.py {project}/tests/test_array_block.py -m "not slow and not plot"'

[tool.cibuildwheel.linux]
# glibc >= 2.28 ships libmvec; manylinux2014 (glibc 2.17) does NOT, so the
# -lmvec link in setup.py would fail. _2_28 is the right "modern Linux" floor.
# (It is also cibuildwheel 3.x+'s default, but pin it explicitly so a future
# default change can't silently drop libmvec.)
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# Native Apple Silicon only for this first cut (the macos-14 runner is arm64).
# Intel macOS (x86_64) is intentionally out of scope.
archs = ["arm64"]
# libomp is provided by `brew install libomp` — at build AND at runtime (the
# wheel no longer bundles it, see --exclude below). Point setup.py's darwin
# branch at it and pin the deployment target to the runner's floor.
environment = { LIBOMP_PREFIX = "/opt/homebrew/opt/libomp", MACOSX_DEPLOYMENT_TARGET = "14.0" }
# Do NOT vendor libomp (`--exclude libomp`): leave the extension referencing
# Homebrew's libomp by its absolute install-name
# (/opt/homebrew/opt/libomp/lib/libomp.dylib). pynec-accel's macOS wheel excludes
# it too, so when both load in one process they share ONE libomp image instead of
# each loading a private copy. Two private copies is what triggered the OMP
# "Error #15" duplicate-runtime abort + the join-barrier deadlock, forcing the
# KMP_DUPLICATE_LIB_OK / OMP_NUM_THREADS=1 stopgap; one shared runtime keeps both
# backends fully multithreaded with no env vars. This mirrors the Linux wheels,
# where neither side vendors libgomp (glibc's is shared) — macOS has no system
# libomp, so the shared copy is Homebrew's, hence `brew install libomp` is a
# runtime requirement of the macOS wheel. DYLD_LIBRARY_PATH lets delocate resolve
# the (now-external) libomp during repair.
repair-wheel-command = "DYLD_LIBRARY_PATH=$(brew --prefix libomp)/lib delocate-wheel --exclude libomp --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.ruff.lint]
ignore = ["E741"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]
